Add banner for 'no vacancy'

--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
                     </p>
                 </div>
             </div> -->
+            
+            <!-- No Vacancy -->
+            <div class="row">
+                <div class="alert alert-warning" role="alert">
+                    <p>
+                        Chaortica is not looking for new applicants at this time. We encourage you to check out other SF Co-Op vacancies at the <a href="http://haight-st-commons.org/">Haight Street Commons</a> .
+                    </p>
+                </div>
+            </div>
 
 
             <!-- Nav -->
